<resources>
    <string name="app_name">The Butterfly Corner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Butterfly Corner</string>
    <string name="nav_header_subtitle">We Love Butterflies</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_log_in">Log in</string>
    <string name="title_activity_sign__up">Sign Up</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="title_activity_contact__us">Contact Us</string>
    <string name="title_activity_about__us">About Us</string>
    <string name="title_activity_profile__page">Profile Page</string>
    <string name="title_activity_butterfly_db">Butterflies</string>
    <string name="title_activity_acraea_violae">Acraea Violae</string>
    <string name="title_activity_cethosia_cyane">Cethosia Cyane</string>
    <string name="title_activity_danaus__chrysippus">Danaus Chrysippus</string>
    <string name="title_activity_graphium__agamemnon">Graphium Agamemnon</string>
    <string name="title_activity_hypolimnas_bolina">Hypolimnas Bolina</string>
    <string name="title_activity_pachliopta_aristolochiae">Pachliopta Aristolochiae</string>
    <string name="title_activity_papilio_demoleus">Papilio Demoleus</string>
    <string name="title_activity_papilio_memnon">Papilio Memnon</string>
    <string name="title_activity_parthenos_slyvia">Parthenos Slyvia</string>
    <string name="title_activity_number_of_players">Number Of Players</string>
    <string name="title_activity_itempage">Menu</string>
    <string name="title_activity_capture_butterfly">Capture Butterfly</string>
    <string name="preview_description">Image preview will appear here</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="btn_confirm_picture">Confirm Picture</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">2360893980673669</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2360893980673669</string>
</resources>
